stylus/require/components.styl
body
    // padding-top 5rem
    -webkit-box-sizing border-box
    -moz-box-sizing border-box
    box-sizing border-box
    display inline-block

/*------------------------------------*\
    HEADER
    header.php
\*------------------------------------*/

/*
    Main header flexbox
    3 children: div.logo img, nav.nav ul, nav.calls-to-action ul
*/

.header
    z-index 10
    position fixed
    display flex
    top 0
    width 100% // Using %: using the vw unit overflows on the x axis

    &.fixed
        position fixed !important
        height 50px

    &.background
        &::before
            content ""
            z-index -1
            position absolute
            width 100vw
            height 50px
            background white
            -webkit-box-shadow 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12)
            box-shadow 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12)

        ul
            li
                a
                   color $text-color

            &.sub-menu
                background white

.nav
    /*
    * Horizontal scroll flexbox
    * https://iamsteve.me/blog/entry/using-flexbox-for-horizontal-scrolling-navigation
    */
    display flex
    width 100%
    flex-wrap nowrap
    overflow-x auto
    -webkit-overflow-scrolling touch // smooth scrolling on IOS devices
    -ms-overflow-style none // hide scrollbar in Edge

// Hide scrollbar on webkit browsers
.nav::-webkit-scrollbar
    display none

// The scroll bar can not be hidden in Firefox (Gecko) using CSS as of 2018
// See: https://stackoverflow.com/a/6165489/7770081
// Possible solutions: https://stackoverflow.com/a/16671476/7770081

// Don't let flex children shrink to toggle scroll
.nav > *
    flex 0 0 auto

/*
* End horizontal scroll
*/

// Calls to action aligned to the right
.nav ul:last-child
    margin-left auto
    margin-right 1rem

// Logo size
.logo
    width 48px
    height 48px
    margin 0 1rem

.logo img
    border-radius 0 0 50% 50%
    float left

/*
    Secondary header flexboxes
    Each of the two nav is a flexbox, each link is a flex item
*/

.header
    ul
        list-style-type none
        margin 0
        padding 0
        display flex

        // Position nav items
        li
            font-weight bold
            text-transform uppercase
            letter-spacing 0.1rem
            text-align center

            a
                padding 1.18rem 1rem 1rem 1rem

// Dropdown nav
.sub-menu
    flex-direction column
    visibility hidden
    line-height 0.8

    li
        font-size 1.25rem

.menu-item-has-children:hover .sub-menu
    visibility visible

/*
    Links color
 */

.header a
    color $text-color
    -webkit-transition color .2s ease-in-out;
    -moz-transition color .2s ease-in-out;
    -ms-transition color .2s ease-in-out;
    -o-transition color .2s ease-in-out;
    transition color .2s ease-in-out;

// White if over the banner image
body
    &.home .header a,
    &.page-template-template-donate .header a,
    &.page-template-template-form .header a,
    &.page-template-template-volunteers .header a
    &.page-template-template-about .header a
        color $text-color-light
        display inline-block

/*------------------------------------*\
    BANNERS
    components/banner.php
    components/form-banner.php
    components/donate-banner.php
\*------------------------------------*/

/* Banner and Form Banner */

.wt_banner, .wt_form-banner
    position relative
    width 100%
    height 98vh
    margin-top -5rem // Position banner on top
    display flex
    align-items center
    background-size cover !important
    background-attachment fixed !important

    &:before
        content ""
        background-color transparent
        position absolute
        height 0
        left 0
        bottom 0
        border-left 100vw solid transparent
        border-bottom 100px solid white
        z-index 5

    & > *
        flex 1
    
    .wt_banner-image-caption
        text-shadow 0 0 30px #000

.wt_banner-message,
.wt_form-banner-message
    width 90%
    margin 0 10rem 0 auto

    h1
        font-size 7rem
        color $text-color-light
        text-align right
        font-weight bold
        text-transform uppercase

.wt_banner-message 
    h1
        text-shadow 0 0 100px #000

    .wt_cta
        margin 2rem 0 0 auto
        max-width 500px

/* donate banner */

.wt_donate-banner
    // position relative
    width 100%
    min-height 90vh
    padding 100px 0
    background-size cover !important
    background-attachment fixed !important

    .wt_donate-banner-content
        // display none
        margin 0 50px 0 auto
        background #fff;
        width 423px
        padding 2rem 3rem 0
        border-radius 3px;
        text-align center;

        h1
            font-size 2rem

.wt_banner,
.wt_donate-banner
    .wt_banner-image-caption
        position absolute
        color $text-color-light
        font-weight 700
        letter-spacing 0.1em

@media all and (max-width:979px)
    .wt_banner-message,
    .wt_form-banner-message
        h1
            font-size 3rem
        
        .wt_cta
            width 75%
            padding 2rem 1rem
            font-size 1.5rem

/*------------------------------------*\
    ALERT
    components/alert.php
\*------------------------------------*/

.wt_alert
    position fixed
    bottom -100%
    z-index 999999 !important
    display flex
    justify-content flex-start
    align-items flex-start
    background-color $alert-color
    -webkit-transition .33s bottom ease-in-out
    -o-transition .33s bottom ease-in-out
    transition .33s bottom ease-in-out
    width 100%
    height 150px

    &.slide-in
        bottom 0

    img
        flex unset
        height 100%
        width auto
        margin-right 30px
        border-radius 0

    button:focus
        outline none

.wt_alert-message
    max-width 60rem
    padding 1.5rem

@media only screen and (max-width: 800px)
    .wt_alert-message > p
        display none


.wt_close-module
    margin-left auto
    position relative
    top 0rem
    right 0rem
    border none
    background-color transparent
    font-size 3rem

/*------------------------------------*\
    SECTION
    components/section.php
\*------------------------------------*/

.wt_page-section
    position relative
    margin-bottom 5%

    .wt_section-content
        position relative
        display flex

        > *
            flex 1
            margin auto

        .wt_section-message
            padding 6rem

            *
                max-width 650px

            h1
                margin 0 auto 2rem
                text-align left
                font-size 5rem
                letter-spacing 0.2rem
                line-height 6rem
                text-transform uppercase

            p
                margin auto

            .wt_cta
                width 90%
                box-sizing border-box
                margin-top 3rem
                text-transform uppercase
                letter-spacing .1rem

    .wt_featured-items
        max-width 1460px
        margin 5% auto 0
        

// Switch image and message at each new section
.wt_page-section
    .wt_section-image
        position relative

        .wt_section-image-caption
            position absolute
            top 0
            font-size 1.25rem
            letter-spacing 0.1em
            margin 5px 10px
            position absolute
            color white
            text-shadow 0 0 30px #000

    &:nth-of-type(odd)
        .wt_section-image
            img
                width 100%
                height auto
                border-top-left-radius 0
                border-bottom-left-radius 0
            
            .wt_section-image-caption
                left 0

    &:nth-of-type(even)
        .wt_section-image
            margin 2rem 0 2rem 2rem

            img
                width 100%
                height auto
                border-top-right-radius 0
                border-bottom-right-radius 0
            
            .wt_section-image-caption
                right 0

        .wt_section-message
            order -1

// typography reduction on laptop screens
@media only screen and (max-width: 1280px)
    .wt_page-section
        .wt_section-content
            .wt_section-message
                h1
                    margin-bottom 1rem
                    font-size 3rem
                    line-height 4rem

                .wt_cta
                    margin-top 2rem
                    padding 2rem

        .wt_featured-items
            font-size 1.25rem

// Single column and remove image/message switch on smaller screens
@media only screen and (max-width: 979px)
    .wt_page-section
        .wt_section-content
            flex-direction column

            .wt_section-message
                &:nth-of-type(even)
                    order 1

                &:nth-of-type(odd)
                    order -1

            .wt_section-image
                padding 0

                img
                    width 100%
                    border-radius 0 !important

/*------------------------------------*\
    FEATURED ITEMS
    components/featured-item.php
\*------------------------------------*/

// Display as a flexbox
.wt_featured-items
    display flex
    justify-content space-between
    padding 5%

.wt_featured-item // Children
    margin 2rem
    background-color $text-color-light
    border-radius 1rem
    overflow hidden
    // Featured item content flexbox
    display flex
    flex-direction column
    -webkit-box-shadow 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12)
    box-shadow 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12)

// On smaller screens, show items in a single column
@media only screen and (max-width: 800px)
    .wt_featured-items
        flex-direction column

// Each featured item has three children:
// 1. A link to youtube with a background image
// 2. An h2 title
// 3. A paragraph with intro text

// Arbitrary height to display image
// Might want to switch to image instead of background image
.wt_featured-item
    .wt_featured-item-image
        height 20rem
        background-size cover !important
        width 100%

    h2
        padding 2rem 2rem 0 2rem

    p
        padding 0 2rem 2rem 2rem

/*------------------------------------*\
    PAGE INTRO
    components/page-intro.php
\*------------------------------------*/

.wt_page-intro
    max-width 60rem
    margin 10% auto
    padding 2rem // Space out from browser boundaries on mobile

/*------------------------------------*\
    FOOTER
    footer.php
\*------------------------------------*/

.footer
    margin-top 150px
    background-color $dark-background
    color $text-color-light
    padding 0 2rem 2rem 2rem
    bottom 0
    
    .footer-logo
        .logo-img
            vertical-align middle
            width 35px
            height auto
            border-radius 100%
        
        span
            padding-left 5px
            font-weight 700
            letter-spacing 0.05rem
            text-transform uppercase

    .footer-navigation
        display flex
        width 100%

        ul
            display flex
            list-style-type none
            padding 0

            &:last-of-type
                margin-left auto                
            
            li
                margin 3px 20px 3px 3px
                letter-spacing 0.08rem

            .sub-menu
                visibility visible

                li
                    a
                        color $footer-offblue

    .legal
        width 100%
        margin-bottom 0
        color $footer-offblue

.footer a
    color $text-color-light
    
@media all and (max-width:979px)
    .footer
        .footer-navigation
            ul
                display block

